@@ -1,0 +1,7 @@
+namespace DW.WPFToolkit.Controls
+{
+    public interface IMessageCopyFormatter
+    {
+        void Copy(string title, string message, WPFMessageBoxButtons buttons, WPFMessageBoxImage icon);
+    }
+}
